# plana-ai-backend

./: .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  render.yaml  requirements.txt
plana/: __init__.py  cli.py
plana/api/: __init__.py  advanced_planning_tools.py  ai_case_officer.py  app.py  document_analysis.py  learning.py  local_plans_complete.py  models.py  nppf_complete.py  policy_engine.py  reasoning_engine.py  report_generator.py  security.py  similar_cases.py  site_analysis.py
plana/api/councils/: __init__.py
plana/api/councils/broxtowe/: case_officer.py  policies.py
plana/api/routes/: __init__.py  applications.py  documents.py  feedback.py  health.py  policies.py  reports.py  system.py
plana/api/services/: __init__.py  feedback_service.py  pipeline_service.py
plana/config/: __init__.py  settings.py
plana/core/: __init__.py  cache.py  concurrent.py  constants.py  exceptions.py  models.py
plana/decision_calibration/: __init__.py  calibrator.py
plana/documents/: __init__.py  background.py  ingestion.py  manager.py  processor.py  worker.py
plana/improvement/: __init__.py  feedback.py  reranking.py
plana/ingestion/: __init__.py  base.py  newcastle.py
plana/jurisdiction/: cases_filter.py  service.py
plana/location/: __init__.py  gis.py  postcodes.py
plana/policy/: __init__.py  demo_policies.py  extractor.py  search.py
plana/progress/: __init__.py  logger.py
plana/prompts/: __init__.py  case_input_builder.py  loader.py
plana/qc/: __init__.py  benchmark.py  report.py  scorer.py
plana/report/: __init__.py  generator.py
plana/services/: __init__.py  pipeline.py  report.py
plana/similarity/: __init__.py  search.py
plana/storage/: __init__.py  database.py  models.py
prompts/v1.0/: __init__.py  case_officer.md  evaluator.md
prompts/v1.0/schemas/: case_input.json  case_output.json
prompts/v2.0/: case_officer.md
scripts/: check_queue.py  smoke_test_worker.py
src/plana/: __init__.py  cli.py
src/plana/api/: __init__.py  advanced_planning_tools.py  ai_case_officer.py  app.py  document_analysis.py  errors.py  evidence_constants.py  evidence_tracker.py  learning.py  local_plans_complete.py  models.py  nppf_complete.py  policy_engine.py  reasoning_engine.py  report_generator.py  similar_cases.py
src/plana/api/routes/: __init__.py  applications.py  (+6 more)
src/plana/config/: settings.py
src/plana/core/: constants.py  exceptions.py  logging.py  models.py
src/plana/councils/: __init__.py  base.py  fixtures.py  newcastle.py
src/plana/documents/: __init__.py  background.py  manager.py  processor.py  worker.py
src/plana/feedback/: __init__.py  models.py  tracker.py
src/plana/jurisdiction/: __init__.py  analysis.py  policy_filter.py
src/plana/llm/: __init__.py  client.py  stub_client.py
src/plana/pipeline/: __init__.py  orchestrator.py
src/plana/policies/: __init__.py  manager.py  retriever.py
src/plana/policy/: __init__.py  demo_policies.py
src/plana/processing/: __init__.py  extractor.py  pipeline.py
src/plana/reports/: __init__.py  generator.py  templates.py
src/plana/search/: __init__.py  similarity.py  stub_vector_store.py  vector_store.py
src/plana/storage/: __init__.py  base.py  database.py  document_store.py  local.py  models.py  s3.py
tests/: __init__.py  conftest.py  factories.py  test_api.py  test_calibration.py  test_cli.py  test_council_scoping.py  test_councils.py  test_deferral_evidence.py  test_document_endpoints.py  test_document_processing.py  test_extraction_worker.py  test_import_processing_guard.py  test_import_then_reports.py  test_improvement.py  test_integration.py  test_models.py  test_newcastle_adapter.py  test_plan_set_detection.py  test_plana.py  test_progress.py  test_prompts.py  test_qc.py  test_report_evidence.py  test_report_generation_guard.py  test_storage.py  test_worker_lifecycle.py  test_worker_queue.py  verify_report_specificity.py
(+5 files in other folders)
